--- a/index.html
+++ b/index.html
@@ -1,29 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Dynamic Web Fundamentals - James Nathan Pecundo</title>
-    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by James Nathan Pecundo. Learn about HTML, CSS, JavaScript, and web development principles in this course project.">
-    <meta name="author" content="James Nathan Pecundo">
-  </head>
-  <body>
-    <header>
-      <h1>WDD 131 - Dynamic Web Fundamentals - James Nathan Pecundo</h1>
-      <nav>
-        <ul>
-          <li><a href="https://www.linkedin.com/">LinkedIn</a></li>
-          <li><a href="https://byui.instructure.com/">I-Learn</a></li>
-          <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p27#p27">Scripture</a></li>
-          <li><a href="#">Final Project</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <!-- main content will go here -->
-    </main>
-    <footer>
-      <!-- footer content will go here -->
-    </footer>
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WDD 131 - Dynamic Web Fundamentals - Rubia M. Francesco</title>
+  <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by Rubia M. Francesco, a course on dynamic web development, including HTML, CSS, and JavaScript, with resources and projects.">
+  <meta name="author" content="Rubia M. Francesco">
+</head>
+<body>
+  <header>
+    <h1>WDD 131 - Dynamic Web Fundamentals</h1>
+    <nav>
+      <a href="https://www.linkedin.com/in/rubia-m-francesco/">LinkedIn Profile</a>
+      <a href="https://byui.instructure.com/">I-Learn</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a>
+      <a href="#">Final Project</a>
+    </nav>
+  </header>
+  <main>
+    <section class="card">
+      <h2>About Me</h2>
+      <p>I am Rubia M. Francesco, a student of WDD 131. I was born in South Africa and live in Madagascar with my family.</p>
+      <img src="images/my-image.jpg" alt="My Image">
+      <p>Resources:</p>
+      <ul>
+        <li><a href="https://dev.to/">Dev.to Community</a></li>
+        <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>
+        <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
+      </ul>
+    </section>
+    <section class="card">
+      <h2>Web Dev Resources</h2>
+      <p>Here are some web development resources I find useful:</p>
+      <ul>
+        <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
+        <li><a href="https://udemy.com/">Udemy</a></li>
+        <li><a href="https://picsum.photos/">Lorem Picsum Image Placeholder</a></li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; <span id="currentyear"></span> Rubia M. Francesco, Madagascar</p>
+    <p id="lastModified"></p>
+  </footer>
+</body>
 </html>
