--- a/index.html
+++ b/index.html
@@ -3,44 +3,41 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WDD 131 - Dynamic Web Fundamentals - Rubia M. Francesco</title>
-  <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by Rubia M. Francesco, a course on dynamic web development, including HTML, CSS, and JavaScript, with resources and projects.">
-  <meta name="author" content="Rubia M. Francesco">
+  <title>WDD 131 - Dynamic Web Fundamentals - James Nathan Pecundo</title>
+  <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by James Nathan Pecundo, homepage project for wdd131.">
+  <meta name="author" content="James Nathan Pecundo">
+  <link rel="stylesheet" type="text/css" href="styles/base.css">
+  <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
   <header>
     <h1>WDD 131 - Dynamic Web Fundamentals</h1>
     <nav>
-      <a href="https://www.linkedin.com/in/rubia-m-francesco/">LinkedIn Profile</a>
+      <a href="https://www.linkedin.com/">LinkedIn</a>
       <a href="https://byui.instructure.com/">I-Learn</a>
-      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">Scripture</a>
+      <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p27#p27">Scripture</a>
       <a href="#">Final Project</a>
     </nav>
   </header>
   <main>
     <section class="card">
       <h2>About Me</h2>
-      <p>I am Rubia M. Francesco, a student of WDD 131. I was born in South Africa and live in Madagascar with my family.</p>
-      <img src="images/my-image.jpg" alt="My Image">
-      <p>Resources:</p>
-      <ul>
-        <li><a href="https://dev.to/">Dev.to Community</a></li>
-        <li><a href="https://www.smashingmagazine.com/">Smashing Magazine</a></li>
-        <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
-      </ul>
+      <p>My name is James Nathan Pecundo and I go by James. I was born and currently living with my family in the Philippines. I love to travel and love to learn new things</p>
+      <img src="images/my-image.png" alt="My Image">
     </section>
     <section class="card">
       <h2>Web Dev Resources</h2>
-      <p>Here are some web development resources I find useful:</p>
       <ul>
         <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
         <li><a href="https://udemy.com/">Udemy</a></li>
-        <li><a href="https://picsum.photos/">Lorem Picsum Image Placeholder</a></li>
+        <li><a href="https://dev.to/">Dev.to Community</a></li>
+        <li><a href="https://www.youtube.com/">Youtube</a></li>
+        <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
       </ul>
     </section>
   </main>
   <footer>
-    <p>&copy; <span id="currentyear"></span> Rubia M. Francesco, Madagascar</p>
+    <p>&copy; <span id="currentyear"></span> James Nathan Pecundo, Philippines</p>
     <p id="lastModified"></p>
   </footer>
 </body>
