--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     </section>
     <section class="card">
       <h2>Web Dev Resources</h2>
-      <ul>
+      <div class="resource">
         <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
         <li><a href="https://udemy.com/">Udemy</a></li>
         <li><a href="https://dev.to/">Dev.to Community</a></li>
         <li><a href="https://www.youtube.com/">Youtube</a></li>
         <li><a href="https://css-tricks.com/">CSS Tricks</a></li>
-      </ul>
+      </div>
     </section>
   </main>
   <footer>
     <p>&copy; <span id="currentyear"></span> James Nathan Pecundo, Philippines</p>
-    <p id="lastModified"></p>
+    <p> Last Modification: <span id="lastModified"></span></p>
   </footer>
 </body>
 </html>
