--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <header>
-    <h1>WDD 131 - Dynamic Web Fundamentals</h1>
+    <h1>WDD 131: Dynamic Web Fundamentals - James Nathan Pecundo</h1>
     <nav>
       <a href="https://www.linkedin.com/">LinkedIn</a>
       <a href="https://byui.instructure.com/">I-Learn</a>
@@ -22,8 +22,12 @@
   <main>
     <section class="card">
       <h2>About Me</h2>
-      <p>My name is James Nathan Pecundo and I go by James. I was born and currently living with my family in the Philippines. I love to travel and love to learn new things</p>
-      <img src="images/my-image.png" alt="My Image">
+      <p1>My name is James Nathan Pecundo and I go by James. I was born in the Philippines and am currently living here with my family. Currently, I am working as an account representative at a call center company while finishing my studies. I have various hobbies that I spend time on during my free time like reading and sports. I also love to travel and explore new things.</p1>
+      <img class="me" src="images/my-image.png" alt="My Image">
+      <h3>Metro Manila, Philippines</h3>
+      <p2>Located in Southeast Asia, the Philippines is an archipelago of over 7,000 islands, boasting a rich cultural heritage and stunning natural beauty. With a history shaped by Spanish, American, and Asian influences, the country is a vibrant melting pot of cultures, languages, and traditions. It is known for its warm and welcoming people, alongside it's many beautiful places.</p2>
+      <img class="flag" src="images/phil-flag.jpg" alt="My Image">
+      <p3>Official Flag of the Philippines</p3>
     </section>
     <section class="card">
       <h2>Web Dev Resources</h2>
