--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <main>
     <section class="card">
       <h2>About Me</h2>
-      <p1>My name is James Nathan Pecundo and I go by James. I was born in the Philippines and am currently living here with my family. Currently, I am working as an account representative at a call center company while finishing my studies. I have various hobbies that I spend time on during my free time like reading and sports. I also love to travel and explore new things.</p1>
+      <p>My name is James Nathan Pecundo and I go by James. I was born in the Philippines and am currently living here with my family. Currently, I am working as an account representative at a call center company while finishing my studies. I have various hobbies that I spend time on during my free time like reading and sports. I also love to travel and explore new things.</p>
       <img class="me" src="images/my-image.png" alt="My Image">
       <h3>Metro Manila, Philippines</h3>
-      <p2>Located in Southeast Asia, the Philippines is an archipelago of over 7,000 islands, boasting a rich cultural heritage and stunning natural beauty. With a history shaped by Spanish, American, and Asian influences, the country is a vibrant melting pot of cultures, languages, and traditions. It is known for its warm and welcoming people, alongside it's many beautiful places.</p2>
+      <p>Located in Southeast Asia, the Philippines is an archipelago of over 7,000 islands, boasting a rich cultural heritage and stunning natural beauty. With a history shaped by Spanish, American, and Asian influences, the country is a vibrant melting pot of cultures, languages, and traditions. It is known for its warm and welcoming people, alongside it's many beautiful places.</p>
       <img class="flag" src="images/phil-flag.jpg" alt="My Image">
-      <p3>Official Flag of the Philippines</p3>
+      <p>Official Flag of the Philippines</p>
     </section>
     <section class="card">
       <h2>Web Dev Resources</h2>
