--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="description" content="WDD 131 - Dynamic Web Fundamentals by James Nathan Pecundo, homepage project for wdd131.">
   <meta name="author" content="James Nathan Pecundo">
   <link rel="stylesheet" type="text/css" href="styles/base.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;1,100;1,400;1,500&display=swap" rel="stylesheet">
   <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
