--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <section class="card">
       <h2>Web Dev Resources</h2>
       <div class="resource">
-        <ul>
+        <ul class="no-bullets">
           <li><a href="https://www.w3schools.com/">W3 Schools</a></li>
           <li><a href="https://udemy.com/">Udemy</a></li>
           <li><a href="https://dev.to/">Dev.to Community</a></li>
