--- a/temples.html
+++ b/temples.html
@@ -1,104 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="James Nathan Pecundo" />
-    <meta name="description" content="Temple Album" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="styles/temples-large.css" />
-    <link rel="stylesheet" href="styles/temples.css" />
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temple Album</title>
-  </head>
-  <body>
+    <meta name="description" content="Temple Album">
+    <meta name="keywords" content="Temple Album, Manila">
+    <meta name="author" content="James Nathan Pecundo"> 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temples-large.css">
+    <script src="scripts/temples.js" defer></script>
+</head>
+<body>
     <header>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Old</a></li>
-          <li><a href="#">New</a></li>
-          <li><a href="#">Large</a></li>
-          <li><a href="#">Small</a></li>
-        </ul>
-        <button id="hamburger">&#9776;</button>
-      </nav>
+        <h1 class="nameHeader">Temple Album</h1>
+        <button id="menu"></button>
+        <nav class="navigation">
+            <a class="active" href="">Home</a>
+            <a href="">Old</a>
+            <a href="">New</a>
+            <a href="">Larg</a>
+            <a href="">Small</a>
+        </nav>
     </header>
     <main>
-      <h2>Home</h2>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 1"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 2"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 3"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 4"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 5"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 6"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 7"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 8"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
-      <figure>
-        <img
-          src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg"
-          alt="Temple 9"
-        />
-        <figcaption>Manila Philippines Temple</figcaption>
-      </figure>
+        <h2 class="home">Home</h2>
+        <div class="container home">
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+        <figure>
+			<img class="img-temple" src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/400x250/manila-philippines-temple-lds-685730-wallpaper.jpg" loading="lazy" width="250" height="167">
+			<figcaption>Manila Philippines Temple</figcaption>
+		</figure>
+    </div>
     </main>
     <footer>
-      <p>&copy; <span id="currentyear"></span> ✨James Nathan Pecundo✨ Philippines</p>
-      <p id="lastModified"></p>
+        <p>&copy; <span id="currentyear"></span> ✨James Nathan Pecundo✨ Philippines</p>
+        <p id="lastModified"></p>
     </footer>
-    <script src="scripts/temples.js"></script>
-    <script src="scripts/getdates.js"></script>
-  </body>
+</body>
 </html>
