--- a/temples.html
+++ b/temples.html
@@ -23,7 +23,7 @@
             <a class="active" href="">Home</a>
             <a href="">Old</a>
             <a href="">New</a>
-            <a href="">Larg</a>
+            <a href="">Large</a>
             <a href="">Small</a>
         </nav>
     </header>
