--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
     </nav>
   </header>
   <main>
-    <section class="card">
+    <section class="card card-thick">
       <h2>About Me</h2>
-      <p>My name is James Nathan Pecundo and I go by James. I was born in the Philippines and am currently living here with my family. Currently, I am working as an account representative at a call center company while finishing my studies. I have various hobbies that I spend time on during my free time like reading and sports. I also love to travel and explore new things.</p>
+      <p>Located in Southeast Asia, the Philippines is an archipelago of over 7,000 islands, boasting a rich cultural heritage and stunning natural beauty. With a history shaped by Spanish, American, and Asian influences, the country is a vibrant melting pot of cultures, languages, and traditions. It is known for its warm and welcoming people, alongside it's many beautiful places.</p>
       <img class="me" src="images/my-image.png" alt="My Image">
       <h3>Metro Manila, Philippines</h3>
-      <p>Located in Southeast Asia, the Philippines is an archipelago of over 7,000 islands, boasting a rich cultural heritage and stunning natural beauty. With a history shaped by Spanish, American, and Asian influences, the country is a vibrant melting pot of cultures, languages, and traditions. It is known for its warm and welcoming people, alongside it's many beautiful places.</p>
+      <p>My name is James Nathan Pecundo and I go by James. I was born in the Philippines and am currently living here with my family. Currently, I am working as an research associate at a market research firm while finishing my studies. I have various hobbies that I spend time on during my free time like reading and sports. I also love to travel and explore new things.</p>
       <img class="flag" src="images/phil-flag.jpg" alt="My Image">
       <p>Official Flag of the Philippines</p>
     </section>
-    <section class="card">
+    <section class="card card-thin">
       <h2>Web Dev Resources</h2>
       <div class="resource">
         <ul class="no-bullets">
