--- a/place.html
+++ b/place.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Place and Country Page</title>
+    <title>France, Eiffel Tower</title>
     <meta name="description" content="Country or Place Page">
     <meta name="keywords" content="Place, Country">
     <meta name="author" content="James Nathan Pecundo">
