--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -20,11 +20,11 @@
         <h1 class="nameHeader">Temple Album</h1>
         <button id="menu"></button>
         <nav class="navigation">
-            <a class="active" href="">Home</a>
-            <a href="">Old</a>
-            <a href="">New</a>
-            <a href="">Large</a>
-            <a href="">Small</a>
+            <a class="active" href="" id="home-nav">Home</a>
+            <a href="" id="old">Old</a>
+            <a href="" id="new">New</a>
+            <a href="" id="large">Large</a>
+            <a href="" id="small">Small</a>
         </nav>
     </header>
     <main>
