--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -52,7 +52,7 @@
         </article>
         <article>
             <h2>Wireframe</h2>
-            <img src="WDD131/project/images/home-Wireframe.png" alt="Home Wireframe">
+            <img src="./images/home-Wireframe.png" alt="Home Wireframe">
         </article>
     </main>
 
