--- a/form.html
+++ b/form.html
@@ -76,7 +76,7 @@
                 <input type="text" id="user-name" name="user-name" aria-label="Your Name">
             </div>
 
-            <input type="submit" value="Submit Review">
+            <input type="submit" value="Send Review">
         </form>
     </main>
     <footer>
