--- a/project/contact.html
+++ b/project/contact.html
@@ -57,8 +57,8 @@
                 </form>
             </div>
             <div class="final-contact">
-                <h3>Web development for the modern world</h3>
-                <p>Ready to bring your project to life? Contact me to discuss your ideas!</p>
+                <h3>Web Development for Today’s World</h3>
+                <p>Have a project in mind? Reach out today, and let’s collaborate to bring your vision to life!</p>
             </div>
         </section>
     </main>
