--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <a href="https://www.linkedin.com/">LinkedIn</a>
       <a href="https://byui.instructure.com/">I-Learn</a>
       <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/ether/12?lang=eng&id=p27#p27">Scripture</a>
-      <a href="#">Final Project</a>
+      <a href="https://jmsnthnp.github.io/wdd131/project/index.html">Final Project</a>
     </nav>
   </header>
   <main>
