--- a/project/contact.html
+++ b/project/contact.html
@@ -36,7 +36,7 @@
             </div>
             <div class="form-container">
                 <form action="../project/my-handling-form-page" method="post">
-                    <h1>Contact us</h1>
+                    <h1>Contact Us</h1>
                     <ul>
                         <li>
                             <label for="name">Name:</label>
