--- a/project/index.html
+++ b/project/index.html
@@ -27,6 +27,7 @@
             <a  href="../project/index.html">Home</a>
             <a href="../project/projects.html">Projects</a>
             <a href="../project/contact.html">Contact</a>
+            <a href="../index.html">About Me</a>
         </nav>
     </header>
     <main class="container">
