--- a/project/projects.html
+++ b/project/projects.html
@@ -26,6 +26,7 @@
             <a  href="../project/index.html">Home</a>
             <a href="../project/projects.html">Projects</a>
             <a href="../project/contact.html">Contact</a>
+            <a href="../index.html">About Me</a>
         </nav>
     </header>
     <main>
